tests/conformance/syntax/positive/import_alias_valid.ditt
module Syntax.ImportAlias where

import Std.Category as Category
postulate C : Cat
id (x : C) : C = x
