tests/conformance/syntax/negative/import_clauses_invalid_item.ditt
module Syntax.ImportClausesBad where

import Std.Category using (+)
postulate C : Cat
id (x : C) : C = x
